--- a/package.xml
+++ b/package.xml
@@ -3,9 +3,9 @@
   <version>1.0.0</version>
   <description>PID control package</description>
 
-  <maintainer email="lkw_nuaa@163.com">lkw</maintainer>
+  <maintainer email="liaoluweillw@163.com">lkw</maintainer>
 
-  <author>lkw</author>
+  <author>llw</author>
 
   <license>  BSD</license>
 
